; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/pci/ctxfi/extr_cthw20k1.c_src_set_pitch.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/pci/ctxfi/extr_cthw20k1.c_src_set_pitch.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.src_rsc_ctrl_blk = type { %struct.TYPE_4__, i32 }
%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32 }

@MPRLH_PITCH = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32)* @src_set_pitch to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @src_set_pitch(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.src_rsc_ctrl_blk*, align 8
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i8*, i8** %3, align 8
  %7 = bitcast i8* %6 to %struct.src_rsc_ctrl_blk*
  store %struct.src_rsc_ctrl_blk* %7, %struct.src_rsc_ctrl_blk** %5, align 8
  %8 = load %struct.src_rsc_ctrl_blk*, %struct.src_rsc_ctrl_blk** %5, align 8
  %9 = getelementptr inbounds %struct.src_rsc_ctrl_blk, %struct.src_rsc_ctrl_blk* %8, i32 0, i32 1
  %10 = load i32, i32* @MPRLH_PITCH, align 4
  %11 = load i32, i32* %4, align 4
  %12 = call i32 @set_field(i32* %9, i32 %10, i32 %11)
  %13 = load %struct.src_rsc_ctrl_blk*, %struct.src_rsc_ctrl_blk** %5, align 8
  %14 = getelementptr inbounds %struct.src_rsc_ctrl_blk, %struct.src_rsc_ctrl_blk* %13, i32 0, i32 0
  %15 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %14, i32 0, i32 0
  %16 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %15, i32 0, i32 0
  store i32 1, i32* %16, align 4
  ret i32 0
}

declare dso_local i32 @set_field(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
